refactor: JPA migration in LinkController